tests/fixtures/invalid/const_array_assignment.c
int main() {
    const int values[2];
    values[0] = 1;
    return values[0];
}
